# circuits-meter

./: .gitignore  SKILL.md  cabal.project  circuits-meter.cabal  circuits-perf.cabal  justfile
.github/workflows/: haskell-ci.yml
.hie/: Main.hie
.hie/Circuit/: Perf.hie
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.14.1/: circuits-perf-0.1.0.0-inplace.conf  package.cache
examples/: core-analysis.md  nub.md  scaling.md  seismo.md
src/Circuit/: Perf.hs
src/Circuit/Meter/: Time.hs
src/Circuit/Perf/: Signal.hs  Space.hs  Time.hs
