cabal-version: 3.0
name: circuits-perf
version: 0.1.0.0
license: BSD-3-Clause
author: Tony Day
maintainer: tonyday567@gmail.com
category: performance
synopsis: Performance measurement primitives for the circuits ecosystem
description:
  Clock primitives and a benchmark binary for measuring circuit
  throughput.  Includes a delimited-continuation trace benchmark.
build-type: Simple
tested-with:
  ghc ==9.14.1,
  ghc ==9.12.2,
  ghc ==9.10.1

library
  exposed-modules:
    Circuit.Perf

  build-depends:
    base >=4.20 && <5,
    clock >=0.8 && <0.9,
    deepseq >=1.4 && <1.6,

  hs-source-dirs: src
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat

executable perf-bench
  main-is: Main.hs
  hs-source-dirs: app

  build-depends:
    base >=4.20 && <5,
    circuits >=0.1 && <0.2,
    circuits-perf,
    clock >=0.8 && <0.9,
    deepseq >=1.4 && <1.6,
    optparse-applicative >=0.18 && <0.19,

  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat
    -O2
    -rtsopts
